--- a/Public/views/products.html
+++ b/Public/views/products.html
@@ -6,7 +6,7 @@
     <title>Shopluxe - Products</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/products.css">
 </head>
 <body>
     <header class="navbar">
